@@ -1,0 +1,9 @@
+#objdump: -s -j .eh_frame
+#name: elf ehopt0 
+
+.*: +file format .*
+
+Contents of section .eh_frame:
+ 0+000 10000000 00000000 017a0001 781a0004 .*
+ 0+010 01000000 12000000 18000000 00000000 .*
+ 0+020 08000000 04080000 0044 .*
