@@ -1,3 +1,9 @@
+2001-05-14  Richard Henderson  <rth@redhat.com>
+
+	* gas/elf/ehopt0.s: New.
+	* gas/elf/ehopt0.d: New.
+	* gas/elf/elf.exp: Run it.
+
 2001-05-12  Alan Modra  <amodra@one.net.au>
 
 	* gas/i386/sse2.s: Correct cvtps2dq, movdq2q, and movq2dq
